--- a/pgpin-api/Procfile
+++ b/pgpin-api/Procfile
@@ -1,2 +1,3 @@
-web:    pgpin-api web
-worker: pgpin-api worker
+web:       pgpin-api web
+worker:    pgpin-api worker
+scheduler: pgpin-api scheduler
